aboutPage/about.css
/*Nav Starts Here*/

nav
{
    justify-content: space-between;
    width: 100%;
    display: flex;
    border-bottom: 1px solid rgba(124, 124, 124, 0.13);
}

.navbar
{
    display:flex;
    flex-flow: row wrap;
    align-items: right;
}

.hamburger 
{
    display: none;
}

.bar {
    display: block;
    width: 25px;
    height: 3px;
    margin: 5px auto;
    -webkit-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;
    background-color: #101010;
}

.navsection
{
    list-style-type: none;
    padding-right: 15px;
    padding-left: 15px;
    padding-top: 15px;
}

#NameHead
{
    float: left;
    text-decoration: none;
    position: relative;
    padding-left: 30px
}

#NameHead a
{
    text-decoration: none;
}

#navmenu
{
    float: right;
    position: relative;
    padding-right: 30px;
}

#navCurrent a
{
    color: Black;
    font-weight: 400;
}

#navOthers a
{
    color: rgb(124, 124, 124);
    font-weight: 300;
}

.navbar a, .navbtn
{
    font-size: 14px;
    text-decoration: none;
    list-style-type: none;
    border: none;
    background-color: inherit;
    font-family: "fustat", sans-serif;
    font-weight: 400;
    font-style: normal;
}

.navbtn a:hover
{
    text-decoration: underline;
}

.Socialsicon
{
    width: 2em;
    height: 2em;
    padding: 2px;
    filter: brightness(0);
    transition: 0.3s;
}

.Socialsicon:hover
{
    filter: none;
    transition: 0.3s;
}

/*Nav Ends Here*/
/*Page Starts Here*/
body
{
    margin: 0; /* Body has a default margin of 8px */
    font-family: "fustat", sans-serif;
    font-weight: 400;
    font-style: normal;
    animation: fadeInAnimation ease 0.5s;
    animation-iteration-count: 1;
    animation-fill-mode: forwards;
    scroll-behavior: smooth;
}

@keyframes fadeInAnimation 
{
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}

#loading 
{
    position: fixed;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    opacity: 0.8;
    background-color: #fff;
    z-index: 99;
}
  
#loading-image 
{
    z-index: 100;
    width: 50px;
    height: 50px;
}

#nameLogo
{
    margin-top: 30px;
    margin-bottom: 20px;
    text-align: center ;
}

#NameImg
{
    padding-top: 12px;
    padding-bottom: 3px;
}

h1
{
    color: black;
    text-align: center;
    font-size: 20px;
    padding-top: 15px;
    letter-spacing: 2px;
    font-family: "fustat", sans-serif;
    font-weight: 700;
    font-style: normal;
}

#NameLogo
{
    text-align: center;
    padding-top: 20px;
    width: 150px;
    height: 80px;
    margin: auto;
}

#Container
{
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    margin-left: 10%;
    margin-right: 10%;
}

.ContainerChild
{
    display: inline-block;
}

h2
{
    font-family: "fustat", sans-serif;
    font-weight: 400;
    font-style: normal;
    font-size: 35px;
}

.underline
{
    text-decoration: underline;
    text-decoration-color: rgb(199, 199, 199);
}

#name
{
    font-weight: 600;
}

#text
{
    margin: auto;
    width: 85%;
    min-width: 12em;
}

.abtTxt
{
    font-size: 16px;
}

#pfpBox
{
    background-image: url(Images/me.jpg);
    background-size: cover;
    min-width: 18em;
    width: 18em;
    height: 21em;
    border-radius: 10px;
    margin-left: 1.5em;
    margin-right: 1.5em;
    margin-top: 3em;
}

#SendBtn
{
    border: none;
    margin-top: 1em;
    background-color: black;
    border-radius: 20px;
    padding: 0.8em;
    width: 11em;
    color: white;
    font-size: 16px;
    font-style: bold;
}

#SendBtn a
{
    color: white;
    text-decoration: none;
    font-family: "fustat", sans-serif;
    font-weight: 400;
    font-style: normal;
}

#SendBtn:hover
{
    opacity: 85%;
    cursor: pointer;
}

#btnArrow
{
    padding-left: 5px;
    padding-top: -2px;
}

@media screen and (max-width: 820px)
{
    #Container
{
    display: block;
    justify-content: none;
    align-items: none;
    margin-left: 5em;
    margin-right: 5em;
    margin-top: 3em;
}

.ContainerChild
{
    display: block;
}

#pfpBox
{
    margin: auto;
    min-width: 15em;
    width: 15em;
    height: 19em;
}

h2
{
    text-align: center;
}

.abtTxt
{
    font-size: 14px;
    text-align: justify;
}

#BtnContainer
{
    text-align: center;
}

}


@media screen and (max-width: 800px)
{
    .navbar 
    {
        position: fixed;
        left: -200%;
        top: 3rem;
        flex-direction: column;
        background-color: #fff;
        width: 100%;
        border-radius: 10px;
        transition: 0.5s;
        box-shadow: none;
        z-index: 2;
    }
    
    .navbar a, .navbtn
    {
        font-size: 12px;
    }

    .navbar.active 
    {
        left: 0;
    }
    
    .navsection 
    {
        display: fixed;
        padding: 15px;
    }
    
    .hamburger 
    {
        display: block;
        cursor: pointer;
        float: right;
        position: relative;
        padding-top: 25px;
        z-index: 2;
    }

    .hamburger.active .bar:nth-child(2) {
        opacity: 0;
    }
    
    .hamburger.active .bar:nth-child(1) {
        transform: translateY(8px) rotate(45deg);
    }
    
    .hamburger.active .bar:nth-child(3) {
        transform: translateY(-8px) rotate(-45deg);
    }

    #BtnContainer
    {
        text-align: center;
    }
}

/*Page Ends Here*/
/*Footer Starts Here*/

footer
{
    margin-top: 5em;
    margin-bottom: 5em;
}

#FooterHr
{
    width: 70%;
    text-align: center;
    border: 0.5px solid #c4c4c47b;
}

#FooterText
{
    padding-top: 8px;
    text-align: center;
    line-height: 10px;
    font-size: 12px;
    font-family: "fustat", sans-serif;
    font-weight: 400;
    font-style: normal;
    color: #c4c4c4;
}

#FooterSocials
{
    text-align: center;
}

.FSocialsicon
{
    width: 2em;
    height: 2em;
    margin: auto;
    padding-right: 10px;
    padding-left: 10px;
    opacity: 40%;
    filter: brightness(0);
    transition: 0.3s;
}

.FSocialsicon:hover
{
    filter: none;
    opacity: 100%;
    transition: 0.3s;
}

/*Footer Ends Here*/

